# gaussian_mixture_model

./: CMakeLists.txt  README.txt  package.xml
include/gaussian_mixture_model/: gmm.h
msg/: Gaussian.msg  GaussianMixture.msg
src/: gmm.cpp  gmm_node.cpp  gmm_node.h  gmm_rviz_converter.cpp  gmm_rviz_converter.h  trajectory_converter.cpp  trajectory_converter.h
